--- a/Dockerfile.amd
+++ b/Dockerfile.amd
@@ -9,7 +9,24 @@ RUN pip3 install python-igraph ruffus tqdm boto3 networkx graphviz tensorflow te
 
 RUN pip3 install git+https://github.com/thejonaslab/tinygraph.git
 
-RUN mkdir -p /tmp/rassp-public/rassp
-COPY rassp-public/setup.py /tmp/rassp-public/
-COPY rassp-public/rassp/ /tmp/rassp-public/rassp/
-RUN cd /tmp/rassp-public && python -m pip install -e .
+#RUN mkdir -p /tmp/rassp-public/rassp
+#COPY rassp-public/setup.py /tmp/rassp-public/
+#COPY rassp-public/rassp/ /tmp/rassp-public/rassp/
+#RUN cd /tmp/rassp-public && python -m pip install -e .
+
+RUN mkdir -p /build/rassp
+ENV RASSP /build/rassp
+COPY rassp-public/setup.py /build/
+#COPY --chown=build models/* $RASSP/models/
+COPY rassp-public/rassp/util.py rassp-public/rassp/inference_script.py rassp-public/rassp/run_rassp.py rassp-public/rassp/netutil.py $RASSP/
+# COPY --chown=build util.py netutil.py $RASSP/
+COPY rassp-public/rassp/model/ $RASSP/model/
+COPY rassp-public/rassp/featurize/ $RASSP/featurize/
+COPY rassp-public/rassp/dataset/ $RASSP/dataset/
+COPY rassp-public/rassp/msutil/ $RASSP/msutil/
+
+WORKDIR /build/
+RUN python -m pip install -e .
+RUN python -c 'import rassp.msutil'
+
+WORKDIR /work
